assets/sass/components/_pages.scss
/*  
================================================================
LAYOUT
================================================================  
*/


.header{
    padding-top: 20px;
}

body{
    display: flex;
    flex-flow: column;
    min-height: 100vh;
}

.page{
    flex:1;
}

.main{
    padding: 60px 0 60px;
}

.page-section{
    padding: $flexboxgrid-outer-margin 0 $flexboxgrid-outer-margin;
}

.page-banner{
    padding: $flexboxgrid-outer-margin 0 $flexboxgrid-outer-margin;
    margin: $flexboxgrid-outer-margin 0 $flexboxgrid-outer-margin;
}

.border-top{
    border-top: 1px solid black;
}

.padded{
    padding: 15px;
}

/*  
================================================================
COLOURS
================================================================  
*/

.bg-yellow{
    background-color: $yellow;
}



/*  
================================================================
FOOTER
================================================================  
*/

.site-footer{
    padding: $flexboxgrid-outer-margin 0 $flexboxgrid-outer-margin;
}

.top-footer{
    padding-bottom: 3rem;
}

.footer-content{
    padding: .75rem 0 3rem;
}

.site-footer li{
    padding: .75rem 0 .5rem;
    border-bottom: 1px solid black;
}
.site-footer li:first-child{
    padding-top: 0;
}

.partners-title{
    font-size:.75rem;
    padding-top:.75rem;
    border-top:1px solid black;
    p{
        padding: 0;
    }
}

.logo-row{
    align-items: baseline;
    padding-top:.75rem;
    padding-bottom: 1.5rem;
}

.logo-container{
    margin:0;
    padding-top: .75rem;
    padding-bottom: 2rem;
    display: block;
    img{
        width: 100%;
        max-width: 170px;
     }
}

/*  
================================================================
HOME PAGE
================================================================  
*/

.introduction-text{
    font-size: 1.125rem;
    padding-bottom: 1rem;
}





/*  
================================================================
BOARDS
================================================================  
*/

.board-section{
    background: $lightBlack;
}

.board-header{
    padding: 2rem 0 50px;
}

.board-title{
    text-transform: uppercase;
    color: $yellow;
    font-size: 1.75rem;
    font-weight: bold;
}

.names-list{
    list-style: none;
    margin:0;
    padding:0 0 20px;
    text-indent: 0;
}

.names-list-item{
    border-top:1px solid white;
    padding: 20px 0 20px;
    font-family: 'Dot Mono', monospace;
    color: white;
    font-size: 1.25rem;
    line-height: 1.5;
}

.names-list-item .date, .names-list-item .name{
    width:100%;
    margin-bottom: 1rem;
    background: black;
    display: block;
    padding: 8px 5px 5px 8px;
    word-break: break-all;
    -webkit-border-radius: 1px;
    -moz-border-radius: 1px;
    border-radius: 1px;

	box-shadow: 

		0 .06em 0 rgba(150, 150, 150, .1); 
}

.names-list-item .name{
    margin-bottom: 0;
}


.board{
    .date, .name{
        letter-spacing: 0px;
        span{
            opacity: 0;
            width:1em;
            display: inline-block;
            margin: 0;
            padding: 0;
            animation:flip .01s linear;
            animation-fill-mode: forwards;
           
        }
        @for $i from 0 through 224{
          .letter-#{$i + 1}{
            animation-delay:1s + $i/12;
          }
        }
    }
}

/*  
================================================================
BOARDS LETTER ANIMATIONS
================================================================  
*/

@keyframes flip{
    from{opacity:0;}
    to{opacity:1;}
}



/*  
================================================================
FORM OVERLAY
================================================================  
*/

.form-container{
    max-width: 550px;
}

.form--open{
    .form-overlay{
        right:0;
        transition: right 300ms 50ms ease-in-out;
    }
}

.form-overlay{
    position: fixed;
    overflow-y: scroll;
    overflow-x: hidden;
    top:0;
    right:-100vw;
    width:100vw;
    height:100vh;
    transition: right 300ms 50ms ease-in-out;
    background:white;
    z-index:40;
}


/*  
================================================================
VENUE LIST
================================================================  
*/

.venue-list{
    padding-top: 3em;
}

.venue-list li{
    padding: 20px 0px 18px;
    border-top: 1px solid black;
    font-size: 1.5rem;
    a{
        display: flex;
        width:100%;
        .name{
            
            padding-left:15px;
        }
        .arrow{
            width:30px;
            line-height: 1.3;
        }
    }
}


/*  
================================================================
VENUE
================================================================  
*/

.venue-details{
    margin-bottom: 3rem;
}

.details{
    padding: 1.5rem 0 1.5rem;
    h3{
        font-weight: bold;
        padding: 0;
        margin: 0;
    }
    p{
        padding-bottom: 1.5rem;
    }
}

.event-section{
    width:100%;
//    padding-left: 5px;
    margin-top: -2px;
}

.event{
    padding-bottom: 3rem;
    p{
        padding: 0 0 1em;
    }
    .event-type, img{
        padding-bottom: 1em;
        display: block;
        text-transform: uppercase;
    }
    .event-title{
        font-size: 1.125rem;
        padding-bottom: 1rem;
//        text-transform: uppercase;
    }
}


/*  
================================================================
FAQS
================================================================  
*/

.questions{
   
}

.question{
    font-size: 1.125rem;
    padding:20px 0 20px;
    border-top: 1px solid black;
    .question-title{
        font-weight: bold;
    }
    .answer{
        padding-top: 1em;
    }
    .answer p{
        font-size: 1em;
    }
}


/*  
================================================================
MAP
================================================================  
*/

#map{
    min-height: 500px;
    height:100vh;
}

.map-main, .map-section{
    padding-bottom: 0;
}



/*  
================================================================
RESROUCES
================================================================  
*/

.block-link{
    transition: 300ms transform ease-in-out;
    display: block;
    &:hover{
        transform: scaleX(1.02) scaleY(1.02);
        transition: 300ms transform ease-in-out;
    }
}


.resource{
    .resource-type{
        padding-bottom: 2rem;
    }
    p{
        padding-bottom: 1rem;
    }
    .button-text{
        padding-top: 2rem;
        display: block;
    }
}



/*  
================================================================
MODERATION PAGE
================================================================  
*/

.moderation-title{
    hr{
        border-top: 2px solid black;
    }
}

.moderation-row{
    .radio-wrapper label .label{
        width: auto;
    }
}


/*  
================================================================
ARCHIVE PAGE
================================================================  
*/

.archive-list-item{
    padding: 20px 0 20px;
    border-top: 1px solid black;
}

/*  
================================================================
PARTNERS PAGE
================================================================  
*/

.partner-logo{
    width:90%;
    height:100%;
    object-fit: contain;
    font-family: 'object-fit: contain; object-position:bottom left;';
    object-position: bottom left;
    
}

.logo-wrapper{
    width:100%;
    max-width: 220px;
    height:90px;
    position: relative;
    margin: 1rem 0 1.5rem;
}


/*  
================================================================
COOKIE NOTICE
================================================================  
*/

#cookieNotice{
    background: $yellow;
    color: black;
    width:100%;
    padding: 10px 20px 10px; 
    position: fixed;
    top:100vh;
    left:0;
    font-family: "New Rail Alphabet", sans-serif;
    font-size: 12px;
    line-height: 24px;
    transform: translate(0%,00%);
    animation: slideUp 300ms;
    animation-delay: 2000ms;
    animation-direction: normal;
    animation-fill-mode: forwards;
    .message{
        display: inline-block;
        padding-right: .5em;
    }
    .learn-more{
        padding: 0 .75em 0 0;
        color:black;
        text-decoration: underline;
        display: inline-block;
    }
    .button{
        display: inline-block;
        max-width: 150px;
    }
}

@keyframes slideUp{
    from{
        transform: translate(0,0);
    }
    to{
        transform: translate(0,-100%);
    }
}

